# minibot

./: LICENSE  README.md  firmware.ino
simulation/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
simulation/docs/: INSTALLATION.md  TUTORIAL.md
simulation/scripts/: setup_repository.sh
simulation/src/mobile_robot/: CMakeLists.txt  package.xml
simulation/src/mobile_robot/config/: controllers.yaml
simulation/src/mobile_robot/launch/: amcl.launch  robot_description.launch  sim_with_map.launch  world.launch
simulation/src/mobile_robot/map/: arena.yaml  map.pgm  map.yaml
simulation/src/mobile_robot/src/: diff_drive_hardware_interface.cpp
simulation/src/mobile_robot/urdf/: mobile_robot.urdf
simulation/src/mobile_robot/worlds/: cylinder.world
simulation/src/navigation/config/: local_costmap_params.yaml
src/mobile_robot/: package.xml
src/mobile_robot/launch/: amcl.launch  controller.launch  sim_with_map.launch
src/mobile_robot/map/: hcr.yaml
src/mobile_robot/rviz/: rviz.rviz
src/mobile_robot/src/: diff_drive_hardware_interface.cpp
src/mobile_robot/urdf/: my_robo_hardware.urdf  my_robo_simulation.urdf
src/navigation/: package.xml
src/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
