<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot</name>
  <version>0.0.0</version>
  <description>The mobile_robot package</description>

  <maintainer email="muhammad@todo.todo">Muhammad</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Run dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Export -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
